tests/negative/typecheck/typeclass-ord.orng
fn main() -> Bool {
    let x = true
    let y = false
    x < y
}